Various styling changes for iPhone6 and iPad Stop the logged in picture from getting squished horizontally in the HamburgerMenu and add a bit of space between the icon and the "Profile" menu choice. On the footer bar, the Ballot and Network icons had dropped to the bottom of the space, now they are centered again.  They also now have the selected indicator extend full height within the menu, previously it went from the bottom to about 80% of height. Adjusted the location of the X in the intro modal, to make it easier to hit on the iPhone.

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -35,6 +35,10 @@ $space-search-right: 10%;
     background-color: $page-header-color;
     color: $white;
   }
+
+  &__cordova {
+    padding-bottom: $space-xs;
+  }
 }
 
 .page-header-cordova-ios {
